CHANGES IN VERSION 1.5.16
------------------------
 o fixed R check <2016-10-10, Mon>
   + check.aes parameter is not available in release version of ggplot2 yet
 
CHANGES IN VERSION 1.5.15
------------------------
 o check.aes for layers defined in ggtree <2016-10-07, Fri>
 o recalculate 'angle' when collapse, expand and rotate clade <2016-10-06, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/78

CHANGES IN VERSION 1.5.14
------------------------
 o subset tip in geom_tiplab2 <2016-10-05, Wed>
 o add `compute_group` according to ggplot (v2.1.0) <2016-09-29, Thu>
   + https://github.com/hadley/ggplot2/issues/1797
 o unit test for groupOTU and groupClade <2016-09-22, Thu>
 o groupOTU label groups by input group names (when input is a named list) <2016-09-22, Thu>
 o update angle calculation for geom_tiplab <2016-09-13, Thu>
 o as.polytomy to collapse binary tree to polytomy by applying 'fun' to selected 'feature' (e.g. bootstrap value less than 70). <2016-09-13, Tue>
   + currently only phylo object supported.
   + add test for as.polytomy

CHANGES IN VERSION 1.5.13
------------------------
 o facet_plot for plotting data with tree <2016-09-06, Tue>
 o more parameters for column names in gheatmap <2016-09-06, Tue>
   + colnames_angle
   + colnames_offset_x
   + colnames_offset_y
   + hjust
 o offset parameter in geom_tiplab and geom_tiplab2 <2016-09-05, Mon>

CHANGES IN VERSION 1.5.12
------------------------
 o use data in all layers instead of the base layer for coordination calculation in subview <2016-09-01, Thu>
 o bug fixed in subview, width & height should be width/2 & height/2 <2016-09-01, Thu>

CHANGES IN VERSION 1.5.11
------------------------
 o gheatmap works with matrix <2016-08-28, Sun>
   + https://groups.google.com/forum/?utm_medium=email&utm_source=footer#!msg/bioc-ggtree/2YLvXHMJJ6U/c4zS7yfGCAAJ
 o support parsing expression in geom_strip <2016-08-18, Thu>
 o bug fixed in geom_tiplab <2016-08-17, Wed>