@@ -1,6 +1,6 @@
 ##' bar of range (HPD, range etc) to present uncertainty of evolutionary inference
 ##'
-##' 
+##'
 ##' @title geom_range
 ##' @param range range, e.g. "height_0.95_HPD"
 ##' @param ... additional parameter, e.g. color, size, alpha
@@ -12,12 +12,12 @@ geom_range <- function(range="height_0.95_HPD", ...) {
     position = "identity"
     show.legend = NA
     na.rm = TRUE
-    inherit.aes = FALSE    
+    inherit.aes = FALSE
 
     default_aes <- aes_(x=~x, y=~y, xend=~x, yend=~y)
-    
+
     mapping <- modifyList(default_aes, aes_string(branch.length="branch.length", label=range))
-        
+
     layer(
         stat = StatRange,
         mapping = mapping,
@@ -26,15 +26,16 @@ geom_range <- function(range="height_0.95_HPD", ...) {
         position = position,
         show.legend=show.legend,
         inherit.aes = inherit.aes,
-        params = list(na.rm = na.rm, ...)
+        params = list(na.rm = na.rm, ...),
+        if (packageVersion('ggplot2') > '2.1.0') check.aes = FALSE
     )
-    
+
 }
 
 StatRange <- ggproto("StatRange", Stat,
                      compute_group = function(self, data, scales, params) {
                          ## label is actually the range
-                         
+
                          df <- data[!is.na(data[,"label"]),]
                          rr <- gsub("\\[", "", df[,"label"])
                          rr <- gsub("\\]", "", rr)
